# sydf

./: .gitignore  Cargo.toml  README.md  sydf
src/: bundle.rs  clap.yaml  filesystem.rs  main.rs  path.rs  workdir.rs
src/tracker/: file.rs
