[package]
name = "sydf"
version = "1.0.0"
authors = ["Filip Parag <filip@parag.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quit = "1.1.0"
shellexpand = "2.0.0"
npath = { git = "https://github.com/gdouezangrard/npath" }
clap = { version = "3.0.0-beta.2", features = ["yaml"] }